; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_jpeg2000dwt.c_ff_dwt_encode.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_jpeg2000dwt.c_ff_dwt_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_dwt_encode(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

11:                                               ; preds = %2
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  switch i32 %14, label %27 [
    i32 129, label %15
    i32 128, label %19
    i32 130, label %23
  ]

15:                                               ; preds = %11
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @dwt_encode97_float(%struct.TYPE_6__* %16, i8* %17)
  br label %28

19:                                               ; preds = %11
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @dwt_encode97_int(%struct.TYPE_6__* %20, i8* %21)
  br label %28

23:                                               ; preds = %11
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @dwt_encode53(%struct.TYPE_6__* %24, i8* %25)
  br label %28

27:                                               ; preds = %11
  store i32 -1, i32* %3, align 4
  br label %29

28:                                               ; preds = %23, %19, %15
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %27, %10
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @dwt_encode97_float(%struct.TYPE_6__*, i8*) #1

declare dso_local i32 @dwt_encode97_int(%struct.TYPE_6__*, i8*) #1

declare dso_local i32 @dwt_encode53(%struct.TYPE_6__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
